# cython-numpy

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
cnpy/: __init__.py  clip.pyx
examples/: clip.py
