[build-system]
requires = ["setuptools >= 61.0", "wheel", "Cython >= 3.0", "numpy >= 1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cnpy"
version = "0.1.0"
description = "Cython implementation of cnpy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.setuptools]
include-package-data = true
